--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="title" content="Hoja de Vida de Wider Duarte">
     <meta name="keywords" content="Hoja de Vida, Curriculum Vitae, HV, CV, Perfil Profesional">
     <link rel="author" href="ENLACE DE LINKEDIN">
-    <link rel="icon" href="img/WilderDuarte.png" type="image/png">
+    <link rel="icon" href="img/perfil.jpg" type="image/png">
     <title>Hoja de Vida - Juan José Lozano</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilo.css">
